--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.demetoir.a3dsound_ndk.MainActivity">
+    tools:context="me.demetoir.a3dsound_ndk.MainActivity"
+    android:id="@+id/MainActivityFrameLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,14 +24,18 @@
                 android:id="@+id/head"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/head" />
+                android:src="@drawable/man_head" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/orbit"/>
 
             <ImageView
                 android:id="@+id/sound_source"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/flat_cycles_32x32"
-
                 />
 
         </RelativeLayout>
@@ -77,7 +82,6 @@
 
         </LinearLayout>
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,8 +105,6 @@
                 android:text="@string/stopButtonText" />
 
         </LinearLayout>
-
-
 
     </LinearLayout>
 
