메뉴 속도, 방향조절 구현 완료 음원 선택 구현중

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,26 +2,34 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MainActivityFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.demetoir.a3dsound_ndk.MainActivity"
-    android:id="@+id/MainActivityFrameLayout">
+    tools:context="me.demetoir.a3dsound_ndk.MainActivity">
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton3"
+        android:id="@+id/modeSelectFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:fabSize="mini"
+        app:fabSize="normal"
         app:srcCompat="@android:drawable/ic_menu_preferences" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/playStopFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:srcCompat="@android:drawable/ic_media_play" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/closeSettingFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:srcCompat="@android:drawable/btn_dialog" />
 
 
     <RelativeLayout
@@ -33,13 +41,36 @@
         <ImageView
             android:id="@+id/orbit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
 
         <ImageView
             android:id="@+id/head"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/man_head" />
+
+        <SeekBar
+            android:id="@+id/seekBarSoundObjectSpeed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Switch
+            android:id="@+id/switchSoundObjectDirection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/switch_text"
+            android:textOff="@string/switch_direction_forward"
+            android:textOn="@string/switch_direction_reverse" />
+
+        <Switch
+            android:id="@+id/switchSoundObjectSpeedRandomize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/switch_Sound_Object_Speed_Randomize" />
+
 
     </RelativeLayout>
 
