--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/item1"
+        android:id="@+id/menu_select_sound"
         android:icon="@drawable/icon"
-        android:title="item1" />
+        android:title="@string/menu_select_sound" />
 
 
     <item
-        android:id="@+id/item2"
+        android:id="@+id/menu_set_speed"
         android:icon="@drawable/icon"
-        android:title="item2" />
+        android:title="@string/menu_set_speed" />
 
+    <item
+        android:id="@+id/menu_set_direction"
+        android:icon="@drawable/icon"
+        android:title="@string/menu_set_direction" />
 
 </menu>
