--- a/app/src/main/res/layout/activity_select_sound.xml
+++ b/app/src/main/res/layout/activity_select_sound.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context="me.demetoir.a3dsound_ndk.SelectSoundActivity">
 
+    <ListView
+        android:id="@+id/sound_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
