--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/MainActivityFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.demetoir.a3dsound_ndk.MainActivity">
+    tools:context="me.demetoir.a3dsound_ndk.Activity.MainActivity">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/playStopFAB"
